--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "build": "yarn clean && yarn typecheck && yarn bundle",
     "bundle": "rollup -c rollup.config.ts",
     "clean": "rimraf ./dist ./compiled",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc -p ./tsconfig.build.json ",
     "test": "jest --notify --watch",
     "test:coverage": "jest --coverage",
     "test-ci": "grafana-toolkit plugin:test"
+  },
+  "publishConfig": {
+    "main": "dist/index.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/index.d.ts",
+    "access": "public"
   },
   "files": [
     "index.js",
@@ -20,7 +26,9 @@
   "repository": "github:grafana/grafana-async-query-support",
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "Apache-2.0",
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^2.4.1"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
@@ -29,9 +37,7 @@
     "@grafana/runtime": "8.4.7",
     "@grafana/toolkit": "8.4.7",
     "@grafana/ui": "8.4.7",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-json": "4.0.3",
-    "@rollup/plugin-node-resolve": "7.1.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
@@ -47,16 +53,16 @@
     "@types/rollup-plugin-visualizer": "2.6.0",
     "@types/sinon": "^7.5.2",
     "babel-jest": "^26.6.3",
+    "esbuild": "^0.15.13",
     "jest": "^26.6.3",
     "pretty-format": "25.1.0",
     "react-select-event": "^5.3.0",
     "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
-    "rollup": "2.0.6",
-    "rollup-plugin-sourcemaps": "0.5.0",
-    "rollup-plugin-terser": "5.3.0",
-    "rollup-plugin-typescript2": "^0.29.0",
-    "rollup-plugin-visualizer": "3.3.1",
+    "rollup": "^2.79.1",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-esbuild": "^4.10.1",
+    "rollup-plugin-node-externals": "^5.0.2",
     "sinon": "8.1.1"
   },
   "resolutions": {
