--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-  "extends": "@grafana/tsconfig/base.json",
+  "extends": "@grafana/tsconfig",
   "include": ["src", "index.js"],
   "compilerOptions": {
-    "rootDir": "./src",
     "baseUrl": "./src",
+    "rootDir": "./src",
     "typeRoots": ["./node_modules/@types"],
-    "declaration": true,
-    "outDir": "dist",
-    "target": "es6"
+    "declarationDir": "./compiled",
+    "emitDeclarationOnly": true
   }
 }
