--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@grafana/async-query",
+  "name": "@grafana/async-query-data",
   "version": "0.0.1",
   "description": "Async query support for Grafana",
   "main": "dist/index.js",
@@ -8,7 +8,7 @@
     "build": "yarn clean && yarn typecheck && yarn bundle",
     "bundle": "rollup -c rollup.config.ts",
     "clean": "rimraf ./dist ./compiled",
-    "typecheck": "tsc -p ./tsconfig.build.json ",
+    "typecheck": "tsc -p ./tsconfig.build.json",
     "test": "jest --notify --watch",
     "test:coverage": "jest --coverage",
     "test-ci": "grafana-toolkit plugin:test"
@@ -20,19 +20,15 @@
     "access": "public"
   },
   "files": [
-    "index.js",
     "dist"
   ],
-  "repository": "github:grafana/grafana-async-query",
+  "repository": "github:grafana/grafana-async-query-data-js",
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "Apache-2.0",
   "dependencies": {
     "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
     "@grafana/data": "8.4.7",
     "@grafana/runtime": "8.4.7",
     "@grafana/toolkit": "8.4.7",
@@ -41,31 +37,15 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
-    "@types/braintree__sanitize-url": "4.0.0",
     "@types/jest": "23.3.14",
-    "@types/jquery": "3.3.38",
-    "@types/lodash": "4.14.123",
-    "@types/node": "10.14.1",
-    "@types/papaparse": "5.2.0",
     "@types/react": "17.0.42",
     "@types/react-dom": "17.0.14",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/rollup-plugin-visualizer": "2.6.0",
-    "@types/sinon": "^7.5.2",
-    "babel-jest": "^26.6.3",
     "esbuild": "^0.15.13",
     "jest": "^26.6.3",
-    "pretty-format": "25.1.0",
-    "react-select-event": "^5.3.0",
-    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-esbuild": "^4.10.1",
-    "rollup-plugin-node-externals": "^5.0.2",
-    "sinon": "8.1.1"
-  },
-  "resolutions": {
-    "rxjs": "^6.6.3"
+    "rollup-plugin-node-externals": "^5.0.2"
   }
 }
