--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "yarn clean && yarn typecheck && yarn bundle",
     "bundle": "rollup -c rollup.config.ts",
     "clean": "rimraf ./dist ./compiled",
+    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx ./src",
     "typecheck": "tsc -p ./tsconfig.build.json",
     "test": "jest --notify --watch",
-    "test:coverage": "jest --coverage",
-    "test-ci": "grafana-toolkit plugin:test"
+    "test:ci": "jest",
+    "test:coverage": "jest --coverage"
   },
   "publishConfig": {
     "main": "dist/index.js",
