--- a/package.json
+++ b/package.json
@@ -31,22 +31,33 @@
   },
   "devDependencies": {
     "@grafana/data": "8.4.7",
+    "@grafana/eslint-config": "^5.1.0",
     "@grafana/runtime": "8.4.7",
-    "@grafana/toolkit": "8.4.7",
+    "@grafana/tsconfig": "^1.2.0-rc1",
     "@grafana/ui": "8.4.7",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@swc/core": "^1.3.24",
+    "@swc/jest": "^0.2.24",
     "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^5.1.0",
-    "@types/jest": "23.3.14",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "29.2.4",
     "@types/react": "17.0.42",
     "@types/react-dom": "17.0.14",
-    "esbuild": "^0.15.13",
-    "jest": "^26.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "esbuild": "^0.16.10",
+    "eslint": "^8.31.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "node-notifier": "^10.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^4.10.1",
-    "rollup-plugin-node-externals": "^5.0.2"
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-node-externals": "^5.0.3",
+    "typescript": "4.8.4"
   }
 }
