--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@grafana/data": "8.4.7",
+    "@grafana/data": "9.3.2",
     "@grafana/eslint-config": "^5.1.0",
-    "@grafana/runtime": "8.4.7",
+    "@grafana/runtime": "9.3.2",
     "@grafana/tsconfig": "^1.2.0-rc1",
-    "@grafana/ui": "8.4.7",
+    "@grafana/ui": "9.3.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
@@ -53,6 +53,8 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "node-notifier": "^10.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
     "rollup-plugin-dts": "^5.0.0",
