--- a/.github/workflows/npm-bump-version.yml
+++ b/.github/workflows/npm-bump-version.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup environment
         uses: actions/setup-node@v2.5.1
