--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup environment
-        uses: actions/setup-node@v3.1.1
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         run: yarn install --immutable
