--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "Apache-2.0",
   "dependencies": {
+    "semver": "^7.6.3",
     "tslib": "^2.8.0"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/jest": "29.5.14",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@types/semver": "^7.5.8",
     "@typescript-eslint/eslint-plugin": "^8.12.0",
     "@typescript-eslint/parser": "^8.12.0",
     "esbuild": "^0.24.0",
