--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.2.0",
   "description": "Async query support for Grafana",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "yarn bundle --watch --watch.onStart=\"yarn typecheck\"",
     "build": "yarn clean && yarn typecheck && yarn bundle",
-    "bundle": "rollup -c rollup.config.ts",
+    "bundle": "rollup -c rollup.config.ts --configPlugin esbuild",
     "clean": "rimraf ./dist ./compiled",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx ./src",
     "typecheck": "tsc -p ./tsconfig.build.json",
@@ -15,9 +17,6 @@
     "test:coverage": "jest --coverage"
   },
   "publishConfig": {
-    "main": "dist/index.js",
-    "module": "dist/esm/index.js",
-    "types": "dist/index.d.ts",
     "access": "public"
   },
   "files": [
@@ -27,39 +26,45 @@
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "Apache-2.0",
   "dependencies": {
-    "tslib": "^2.4.1"
+    "tslib": "^2.8.0"
   },
   "devDependencies": {
-    "@grafana/data": "9.3.2",
-    "@grafana/eslint-config": "^6.0.1",
-    "@grafana/runtime": "9.3.2",
-    "@grafana/tsconfig": "^1.2.0-rc1",
-    "@grafana/ui": "9.3.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "12.1.5",
+    "@grafana/data": "11.3.0",
+    "@grafana/eslint-config": "^8.0.0",
+    "@grafana/runtime": "11.3.0",
+    "@grafana/tsconfig": "^2.0.0",
+    "@grafana/ui": "11.3.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@stylistic/eslint-plugin-ts": "^2.9.0",
+    "@swc/core": "^1.7.40",
+    "@swc/jest": "^0.2.36",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "16.0.1",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/jest": "29.2.4",
-    "@types/react": "17.0.42",
-    "@types/react-dom": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "esbuild": "^0.16.10",
-    "eslint": "^8.31.0",
-    "eslint-plugin-jsdoc": "^46.7.0",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "@types/jest": "29.5.14",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.12.0",
+    "@typescript-eslint/parser": "^8.12.0",
+    "esbuild": "^0.24.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.4.3",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "node-notifier": "^10.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
-    "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-node-externals": "^5.0.3",
-    "typescript": "4.8.4"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.27.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.24.2",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "rollup-plugin-node-externals": "^7.1.3",
+    "typescript": "5.6.3"
   }
 }
