--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "yarn clean && yarn typecheck && yarn bundle",
     "bundle": "rollup -c rollup.config.ts --configPlugin esbuild",
     "clean": "rimraf ./dist ./compiled",
-    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx ./src",
+    "lint": "eslint --cache ./src",
     "typecheck": "tsc -p ./tsconfig.build.json",
     "test": "jest --notify --watch",
     "test:ci": "jest",
@@ -30,6 +30,8 @@
     "tslib": "^2.8.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
     "@grafana/data": "11.4.0",
     "@grafana/eslint-config": "^8.0.0",
     "@grafana/runtime": "11.4.0",
