--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,17 @@ jobs:
     outputs:
       new_version: ${{ steps.version_check.outputs.version }}
       version_changed: ${{ steps.version_check.outputs.changed }}
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           ref: main
+          persist-credentials: false
       # limit releases to version changes - https://github.com/EndBug/version-check
       - name: Check version changes
-        uses: EndBug/version-check@v2
+        uses: EndBug/version-check@36ff30f37c7deabe56a30caa043d127be658c425 # v2.1.5
         id: version_check
         with:
           file-url: https://unpkg.com/@grafana/async-query-data@latest/package.json
@@ -26,7 +29,10 @@ jobs:
 
       - name: Version update detected
         if: steps.version_check.outputs.changed == 'true'
-        run: 'echo "Version change found! New version: ${{ steps.version_check.outputs.version }} (${{ steps.version_check.outputs.type }})"'
+        env:
+          NEW_VERSION: ${{ steps.version_check.outputs.version }}
+          VERSION_TYPE: ${{ steps.version_check.outputs.type }}
+        run: 'echo "Version change found! New version: ${NEW_VERSION} (${VERSION_TYPE})"'
 
       - name: Setup .npmrc file for NPM registry
         if: steps.version_check.outputs.changed == 'true'
@@ -67,9 +73,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: npm-publish
     if: needs.npm-publish.outputs.version_changed == 'true'
+    env:
+      NEW_VERSION: ${{ needs.npm-publish.outputs.new_version }}
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Create Release Notes
         uses: actions/github-script@v7.0.1
@@ -77,6 +89,6 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             await github.request(`POST /repos/${{ github.repository }}/releases`, {
-              tag_name: "v${{needs.npm-publish.outputs.new_version }}",
+              tag_name: "v${NEW_VERSION}",
               generate_release_notes: true
             });
