--- a/package.json
+++ b/package.json
@@ -69,5 +69,6 @@
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-node-externals": "^8.0.0",
     "typescript": "5.9.2"
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
