--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@ yarn-error.log
 .DS_Store
 .idea/
 .eslintcache
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
